--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 </h2>
 
 <p>
-<span class="en">We believe, that technologies that we use, should be made understandable to people. You came here to learn. <br><br><font color="grey">Proceed.</font></span>
-    <span class="zh">我们觉得我们应该大家理解我们用的技术。你来这里学习！<br><br><font color="grey">清进行。</font></span>
+<span class="en">We believe, that technologies that we use, should be made understandable to people. You came here to learn. <br><br><font color="grey">Proceed.(will be soon)</font></span>
+    <span class="zh">我们觉得我们应该让大家理解我们用的技术。你来这里学习！<br><br><font color="grey">清进行。（快开）</font></span>
 </p>
 
 
