fetch actual topic's comments; parse Markdown to HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script type="text/javascript" src="./vendor/showdown.min.js"></script>
     <script type="text/javascript" src="./code.js"></script>
     <script type="text/javascript" src="./topics.js"></script>
 
@@ -47,25 +48,10 @@
 <body>
 
 <div class="main">
-<h1>
-    <span class="en">Infinity Family</span>
-    <span class="zh">无界家庭</span>
-</h1>
-
-<h2>
-    <span class="en">How this place work?</span>
-    <span class="zh">这个地方如何操作？</span>
-</h2>
-
-<p>
-<span class="en">We believe, that technologies that we use, should be made understandable to people. You came here to learn. <br><br><font color="grey">Proceed.(will be soon)</font></span>
-    <span class="zh">我们觉得我们应该让大家理解我们用的技术。你来这里学习！<br><br><font color="grey">清进行。（快开）</font></span>
-</p>
-
     <article class="topics">
         <div class="topics__content">
-            <h2 class="topics__title en">Topics</h2>
-            <h2 class="topics__title zh">Topics in Chineese</h2>
+            <h2 class="topics__title en">Infinity Family</h2>
+            <h2 class="topics__title zh">无界家庭</h2>
             <form class="topics__search">
               <input type="search" class="topics__search-input">
               <button class="en">Search</button>
