--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 <div class="main">
     <article class="topics">
         <div class="topics__content">
-            <h1 class="topics__title">Infinity Family</h1>
+            <h1 class="topics__title en">Infinity Family</h1>
+            <h1 class="topics__title cn">无界家庭</h1>
+            <h1 class="topics__title lt">Begalybės šeima</h1>
+            <h1 class="topics__title ru">Семья Инфи́нити</h1>
             <form class="topics__search">
               <input type="search" class="topics__search-input">
               <button class="en">Search</button>
